--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-Will add more details and documentation
+Will add more details and documentation shortly
+
 
 
 Developed initially for the Open Media Project for ChannelAustin
